adm title, desc of audios, events, home, video. Video changes src. footer changed for mobile

--- a/web/src/app/audios/audios.component.html
+++ b/web/src/app/audios/audios.component.html
@@ -11,15 +11,12 @@
       <div class="row">
         <div class="col-8">
           <p class="text">
-            Caminitos de Letras Cultura es un programa radial en el cual se hace homenaje a la poesía en
-            todas sus manifestaciones, sus directoras son Julieta Felicioni, Eugenia Felicioni, Claudia
-            Valenzuela y Marcela Valenzuela, el programa cuenta con el elenco de Radioteatro Recuerdos y
-            el elenco de Teatro Leído Tierra del Fuego.
-            <b>Trabaja promocionando la lectura en radio
-              desde el año 2012 hasta la actualidad.</b>
-            Transmite todos los martes de 21:00 a 23:00 hs por
-            Radio Nacional Ushuaia FM 92.1 TDF.
-
+            <b>Todas las Radios …todas las Provincias…y todas las Voces 2021</b>
+            Envianos tu producción de radioteatro, relato deportivo, mensaje al poblador rural, programas radiales
+            educativos, narraciones, cuentos, poesías y leyendas.
+            <!-- Radiotania2020@gmail.com cel: 02901-15586802 Ushuaia Tierra del Fuego. -->
+            <br>
+            <a href="ttps://radiotania.com/home#contact">Contactate aquí!</a> 
           </p>
         </div>
         <div class="col-4">
@@ -190,15 +187,12 @@
       <div class="row">
         <div class="col-12">
           <p class="text">
-            Caminitos de Letras Cultura es un programa radial en el cual se hace homenaje a la poesía en
-            todas sus manifestaciones, sus directoras son Julieta Felicioni, Eugenia Felicioni, Claudia
-            Valenzuela y Marcela Valenzuela, el programa cuenta con el elenco de Radioteatro Recuerdos y
-            el elenco de Teatro Leído Tierra del Fuego.
-            <b>Trabaja promocionando la lectura en radio
-              desde el año 2012 hasta la actualidad.</b>
-            Transmite todos los martes de 21:00 a 23:00 hs por
-            Radio Nacional Ushuaia FM 92.1 TDF.
-
+            <b>Todas las Radios …todas las Provincias… y todas las Voces 2021</b>
+            Envianos tu producción de radioteatro, relato deportivo, mensaje al poblador rural, programas radiales
+            educativos, narraciones, cuentos, poesías y leyendas.
+            <!-- Radiotania2020@gmail.com cel: 02901-15586802 Ushuaia Tierra del Fuego. -->
+            <br>
+            <a href="ttps://radiotania.com/home#contact">Contactate aquí!</a> 
           </p>
         </div>
         <div class="col-12" style="text-align: center;">
