--- a/web/src/app/shared/footer/footer.component.html
+++ b/web/src/app/shared/footer/footer.component.html
@@ -54,30 +54,30 @@
             <img class="mb-2" src="assets/img/image2.png" alt="" width="50" height="50">
             <small class="d-block mb-3 text-muted">&copy; RADIO TANIA</small>
         </div>
-        <div class="col-6 col-md" style="padding: 0em;">
+        <div class="col-6 col-md" style="padding: 2em;">
             <h5 >INSTAGRAM</h5>
             <ul class="list-unstyled text-small">
                 <li><a class="text-muted" href="https://www.instagram.com/caminitosdeletras_7/" >@Caminitosdeletras_7</a></li>
             </ul>
         </div>
-        <div class="col-6 col-md" style="padding: 0em;">
+        <div class="col-6 col-md" style="padding: 2em;">
             <h5 >FACEBOOK</h5>
             <ul class="list-unstyled text-small">
                 <li><a class="text-muted" href="https://www.facebook.com/Caminitos-de-Letras-Cultura-Radio-Nacional-FM-921-Ushuaia-291885317865296/"
                     >Caminitos de Letras Cultura</a></li>
             </ul>
         </div>
-        <div class="col-6 col-md" style="padding: 0em;">
+        <div class="col-6 col-md" style="padding: 2em;">
             <h5 >CONTACTANOS</h5>
             <ul class="list-unstyled text-small">
                 <li><a class="text-muted" >+5492901-586802 </a></li>
         
             </ul>
         </div>
-        <div class="col-6 col-md" style="padding: 0em;">
-            <h5 >NUSTRO CORREO</h5>
+        <div class="col-6 col-md" style="padding: 2em;">
+            <h5 >CORREO</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="text-muted" >radiotania2020@gmail.com</a></li>
+                <li><a style="font-size: 0.8em;" class="text-muted" >radiotania2020@gmail.com</a></li>
             </ul>
         </div>
     </div>
