--- a/web/src/app/videos/videos.component.html
+++ b/web/src/app/videos/videos.component.html
@@ -9,17 +9,14 @@
     <div class="div2">
       <div class="row">
         <div class="col-8">
-            <p class="text">
-                Caminitos de Letras Cultura es un programa radial en el cual se hace homenaje a la poesía en
-                todas sus manifestaciones, sus directoras son Julieta Felicioni, Eugenia Felicioni, Claudia
-                Valenzuela y Marcela Valenzuela, el programa cuenta con el elenco de Radioteatro Recuerdos y
-                el elenco de Teatro Leído Tierra del Fuego. 
-                <b>Trabaja promocionando la lectura en radio
-                desde el año 2012 hasta la actualidad.</b>
-                Transmite todos los martes de 21:00 a 23:00 hs por
-                Radio Nacional Ushuaia FM 92.1 TDF.
-                
-            </p>
+          <p class="text">
+            En agosto del 2017 Caminitos de Letras Cultura fue galardonado con el premio SUSINI por el
+            Consejo de Radio de ARGENTORES de la ciudad de Buenos. Aires a lo mejor de la radio, en el
+            mes de octubre 2019 en Azul provincia de Buenos Aires recibió el Premio Nacional a la Radio y
+            Televisión “QUIJOTE DE ORO” reconocimiento a los valores y en el año 2020 la Honorable
+            Cámara de Diputados de la Nación declaró de interés nacional al Encuentro Nacional de
+            Radioteatro y Promoción de Lectura en Radio Tierra del Fuego 2020.
+          </p>
         </div>
         <div class="col-4">
             <img src="../../assets/img/image2.png" alt="3" class="image">
@@ -82,17 +79,14 @@
     <div class="div2-mobile">
       <div class="row">
         <div class="col-12">
-            <p class="text">
-                Caminitos de Letras Cultura es un programa radial en el cual se hace homenaje a la poesía en
-                todas sus manifestaciones, sus directoras son Julieta Felicioni, Eugenia Felicioni, Claudia
-                Valenzuela y Marcela Valenzuela, el programa cuenta con el elenco de Radioteatro Recuerdos y
-                el elenco de Teatro Leído Tierra del Fuego. 
-                <b>Trabaja promocionando la lectura en radio
-                desde el año 2012 hasta la actualidad.</b>
-                Transmite todos los martes de 21:00 a 23:00 hs por
-                Radio Nacional Ushuaia FM 92.1 TDF.
-                
-            </p>
+          <p class="text">
+            En agosto del 2017 Caminitos de Letras Cultura fue galardonado con el premio SUSINI por el
+            Consejo de Radio de ARGENTORES de la ciudad de Buenos. Aires a lo mejor de la radio, en el
+            mes de octubre 2019 en Azul provincia de Buenos Aires recibió el Premio Nacional a la Radio y
+            Televisión “QUIJOTE DE ORO” reconocimiento a los valores y en el año 2020 la Honorable
+            Cámara de Diputados de la Nación declaró de interés nacional al Encuentro Nacional de
+            Radioteatro y Promoción de Lectura en Radio Tierra del Fuego 2020.
+          </p>
         </div>
         <div class="col-12" style="text-align: center;">
             <img src="../../assets/img/image2.png" alt="3" class="image">
