--- a/adm/src/app/video/video.component.html
+++ b/adm/src/app/video/video.component.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <form class="w-100 pt-3" [formGroup]="formObject" (ngSubmit)="logForm(formObject.value)">
-            <h3>Administrar audios</h3>
+            <h3>Administrar videos</h3>
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group mb-3">
