--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -145,7 +145,7 @@
 
   <!-- CONTACTANOS -->
 
-            <div class="title">
+            <div class="title" >
                 <div class="text">
                     <h1>
                         CONTACTANOS
@@ -153,6 +153,7 @@
                 </div>
             </div>
             <hr>
+            <a id="contacto"></a>
             <h2>¿Querés formar parte de Radio Tania? Escribinos!</h2>
             <div class="container">
                 <form [formGroup]="formObject" (ngSubmit)="logForm(formObject.value)">
@@ -207,7 +208,7 @@
                   <div class="col-12" style="font-style: italic;">
                     <div style="color: white;" [innerHTML]="homeItem.description"></div>
                   </div>
-                  <div class="col-12" style="margin-top: 10%;">
+                  <div class="col-12 text-mobile" style="margin-top: 10%;">
                       <img [src]="getImage(homeItem.logo)" style="width: 100% !important;" alt="3" class="image">
                   </div>
               </div>
