--- a/web/src/app/video/video.component.html
+++ b/web/src/app/video/video.component.html
@@ -41,7 +41,7 @@
           </h1>
           <div [innerHTML]="item.description"></div>
           <iframe width="97%" height="350"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+          [src]="getVideo(item)">
           </iframe>
           <hr>
         </div>
@@ -121,7 +121,7 @@
           </h1>
           <div style="font-size: 1rem;" [innerHTML]="item.description"></div>
           <iframe width="97%" height="180"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+          [src]="getVideo(item)">
           </iframe>
           <hr>
         </div>
