--- a/web/src/app/audios/audios.component.html
+++ b/web/src/app/audios/audios.component.html
@@ -14,9 +14,9 @@
             <b>Todas las Radios …todas las Provincias…y todas las Voces 2021</b>
             Envianos tu producción de radioteatro, relato deportivo, mensaje al poblador rural, programas radiales
             educativos, narraciones, cuentos, poesías y leyendas.
-            <!-- Radiotania2020@gmail.com cel: 02901-15586802 Ushuaia Tierra del Fuego. -->
             <br>
-            <a href="ttps://radiotania.com/home#contact">Contactate aquí!</a> 
+            Radiotania2020@gmail.com cel: 02901-15586802 Ushuaia Tierra del Fuego.
+            <!-- <a href="ttps://radiotania.com/home#contact">Contactate aquí!</a>  -->
           </p>
         </div>
         <div class="col-4">
@@ -190,9 +190,9 @@
             <b>Todas las Radios …todas las Provincias… y todas las Voces 2021</b>
             Envianos tu producción de radioteatro, relato deportivo, mensaje al poblador rural, programas radiales
             educativos, narraciones, cuentos, poesías y leyendas.
-            <!-- Radiotania2020@gmail.com cel: 02901-15586802 Ushuaia Tierra del Fuego. -->
             <br>
-            <a href="ttps://radiotania.com/home#contact">Contactate aquí!</a> 
+            Radiotania2020@gmail.com cel: 02901-15586802 Ushuaia Tierra del Fuego.
+            <!-- <a href="ttps://radiotania.com/home#contact">Contactate aquí!</a>  -->
           </p>
         </div>
         <div class="col-12" style="text-align: center;">
